syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service SystemCountryCode {
   rpc ReadSystemCountryCode(IdRequestSysCountryCode) returns (SystemCountryCodePayLoad);  
   rpc CreateSystemCountryCode(SystemCountryCodePayLoad) returns (google.protobuf.Empty);
   rpc UpdateSystemCountryCode(SystemCountryCodePayLoad) returns (google.protobuf.Empty);
   rpc DeleteSystemCountryCode(SystemCountryCodePayLoad) returns (google.protobuf.Empty);
  }

message IdRequestSysCountryCode {
    string Id = 1;
}

message SystemCountryCodePayLoad {
         string Code = 1;  
         string Name = 2;
}